# Aether

./: .env.example  .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.app.local  Dockerfile.app.release-local  README.md  docker-compose.release-local.yml  docker-compose.single-node.yml  docker-compose.update.yml  docker-compose.yml  install.sh  update.sh
.github/workflows/: release.yml  rust-ci.yml
apps/aether-gateway/: Cargo.toml  build.rs
apps/aether-gateway/src/: client_session_affinity.rs  error.rs  headers.rs  lib.rs  main.rs  router.rs  system_features.rs
apps/aether-tunnel/: .env.example  Cargo.toml  README.md  install.ps1  install.sh
apps/aether-tunnel/src/: app.rs  config.rs  main.rs  state.rs
crates/aether-admin/src/: system.rs
crates/aether-ai-formats/src/: api.rs  lib.rs
crates/aether-billing/src/: event_enrichment.rs  pricing.rs  service.rs
crates/aether-contracts/: Cargo.toml
crates/aether-contracts/src/: lib.rs  tunnel.rs  tunnel_security.rs
crates/aether-data-query/src/: lib.rs
crates/aether-data-schema/src/: lib.rs
crates/aether-model-fetch/src/: lib.rs  logic.rs  strategy.rs  transport.rs
crates/aether-provider-pool/src/: lib.rs  service.rs
crates/aether-provider-transport/src/: conversion.rs  lib.rs  network.rs  url.rs
crates/aether-usage-runtime/src/: record.rs  report.rs  worker.rs  write.rs
docs/development/: simple-query-inventory.md
docs/superpowers/plans/: 2026-05-24-s3-integrated-backup.md
docs/superpowers/specs/: 2026-05-24-s3-integrated-backup-design.md
frontend/: package-lock.json  package.json
(+448 files in other folders)
