[package]
name = "aether-contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared contracts for Python and Rust Aether components"

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
bytes.workspace = true
flate2.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
